--- a/website_fr.html
+++ b/website_fr.html
@@ -1,6 +1,6 @@
 <!-- wp:buttons {"layout":{"type":"flex","justifyContent":"right"}} -->
 <div class="wp-block-buttons"><!-- wp:button {"backgroundColor":"cyan-bluish-gray","style":{"border":{"radius":"18px","width":"9px"},"spacing":{"padding":{"left":"var:preset|spacing|40","right":"var:preset|spacing|40"}}},"className":"is-style-fill"} -->
-    <div class="wp-block-button is-style-fill"><a class="wp-block-button__link has-cyan-bluish-gray-background-color has-background wp-element-button" style="border-width:9px;border-radius:18px;padding-right:var(--wp--preset--spacing--40);padding-left:var(--wp--preset--spacing--40)">French</a></div>
+    <div class="wp-block-button is-style-fill"><a class="wp-block-button__link has-cyan-bluish-gray-background-color has-background wp-element-button" href="https://melbouar.wordpress.com/?p=172" style="border-width:9px;border-radius:18px;padding-right:var(--wp--preset--spacing--40);padding-left:var(--wp--preset--spacing--40)">English</a></div>
     <!-- /wp:button --></div>
     <!-- /wp:buttons -->
     
