--- a/website_fr.html
+++ b/website_fr.html
@@ -17,7 +17,7 @@
     
     <!-- wp:details {"summary":"Epfl Courses"} -->
     <details class="wp-block-details"><summary>Epfl Courses</summary><!-- wp:paragraph {"placeholder":"Type / to add a hidden block","fontSize":"medium"} -->
-    <p class="has-medium-font-size">EPFL offers over 150 sustainability-related classes at both Master's and Bachelor's level</p>
+    <p class="has-medium-font-size">L'EPFL propose plus de 150 cours liés à la durabilité, aux niveaux du Master et du Bachelor</p>
     <!-- /wp:paragraph --></details>
     <!-- /wp:details --></div>
     <!-- /wp:group -->
