--- a/htmle/index.html
+++ b/htmle/index.html
@@ -5,11 +5,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="bubble" id="bubble1"></div>
-    <div class="bubble" id="bubble2"></div>
-    <div class="bubble" id="bubble3"></div>
-    <div class="bubble" id="bubble4"></div>
-    <div class="bubble" id="bubble5"></div>
+    <div class="circle-container">
+        <div class="bubble" id="bubble1"></div>
+        <div class="bubble" id="bubble2"></div>
+        <div class="bubble" id="bubble3"></div>
+        <div class="bubble" id="bubble4"></div>
+        <div class="bubble" id="bubble5"></div>
+    </div>
 
     <script src="script.js"></script>
 </body>
