--- a/htmle/index.html
+++ b/htmle/index.html
@@ -6,11 +6,26 @@
 </head>
 <body>
     <div class="circle-container">
-        <div class="bubble" id="bubble1"></div>
-        <div class="bubble" id="bubble2"></div>
-        <div class="bubble" id="bubble3"></div>
-        <div class="bubble" id="bubble4"></div>
-        <div class="bubble" id="bubble5"></div>
+        <div class="bubble" id="bubble1">
+            <img src="book.PNG" alt="Image 1">
+            <span>Inform Yourself</span>
+        </div>
+        <div class="bubble" id="bubble2">
+            <img src="Waiter.PNG" alt="Image 2">
+            <span>At Your Service</span>
+        </div>
+        <div class="bubble" id="bubble3">
+            <img src="Fist.PNG" alt="Image 3">
+            <span>Take Action</span>
+        </div>
+        <div class="bubble" id="bubble4">
+            <img src="Rocket.PNG" alt="Image 4">
+            <span>Launch Your Project</span>
+        </div>
+        <div class="bubble" id="bubble5">
+            <img src="Beach.PNG" alt="Image 5">
+            <span>Take Care</span>
+        </div>
     </div>
 
     <script src="script.js"></script>
