beta mini icons

--- a/htmle/index.html
+++ b/htmle/index.html
@@ -26,6 +26,9 @@
             <img src="Beach.PNG" alt="Image 5">
             <span>Take Care</span>
         </div>
+        <div class="bubble smaller" id="epflcourses">
+            <img src="logo\EPFLf_logo (2).jpg" alt="Image1sub1">
+        </div>
     </div>
 
     <script src="script.js"></script>
