link + color for first mini bubble

--- a/htmle/index.html
+++ b/htmle/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Bubble Website</title>
+    <title>EPFL/UNIL Sustainability Resources</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -27,7 +27,8 @@
             <span>Take Care</span>
         </div>
         <div class="bubble smaller" id="epflcourses">
-            <img src="logo\EPFLf_logo (2).jpg" alt="Image1sub1">
+            <a href="https://www.epfl.ch/about/sustainability/fr/durabilite-dans-leducation/programmes-detudes-cours-et-moocs/">
+                <img src="logo\EPFLf_logo (2).jpg" alt="Image1sub1">
         </div>
     </div>
 
