--- a/htmle/index.html
+++ b/htmle/index.html
@@ -30,6 +30,18 @@
             <a href="https://www.epfl.ch/about/sustainability/fr/durabilite-dans-leducation/programmes-detudes-cours-et-moocs/">
                 <img src="logo\EPFLf_logo (2).jpg" alt="Image1sub1">
         </div>
+        <div class="bubble smaller" id="CSAW">
+            <a href="https://www.epfl.ch/about/sustainability/sustainability-in-education/climate-and-sustainability-action-week-csaw/">
+                <img src="logo\Final CSAW_transparent.png" alt="Image1sub2">
+        </div>
+        <div class="bubble smaller" id="Fresque">
+            <a href="https://www.epfl.ch/about/sustainability/fr/communaute-sensibilisation/fresques/">
+                <img src="logo\Fresque du climat (2).png" alt="Image1sub3">
+        </div>
+        <div class="bubble smaller" id="Semaine">
+            <a href="https://semaine-durable.unipoly.ch/">
+                <img src="logo\Semaine_de_la_durabilité transparent.png" alt="Image1sub4">
+        </div>
     </div>
 
     <script src="script.js"></script>
