--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
         <div class="bubble smaller" id="epflcourses">
             <a href="https://www.epfl.ch/about/sustainability/fr/durabilite-dans-leducation/programmes-detudes-cours-et-moocs/">
-                <img src="logo\EPFLf_logo (2).jpg" alt="Image1sub1">
+                <img src="logo\EPFLf_logo transparent.png" alt="Image1sub1">
         </div>
         <div class="bubble smaller" id="CSAW">
             <a href="https://www.epfl.ch/about/sustainability/sustainability-in-education/climate-and-sustainability-action-week-csaw/">
