--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="bubble smaller" id="Fresque">
             <a href="https://www.epfl.ch/about/sustainability/fr/communaute-sensibilisation/fresques/">
-                <img src="logo\Fresque du climat (2).png" alt="Image1sub3">
+                <img src="logo\Fresque du climat.png" alt="Image1sub3">
         </div>
         <div class="bubble smaller" id="Semaine">
             <a href="https://semaine-durable.unipoly.ch/">
