logo folder organization

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <div class="circle-container">
         <div class="bubble" id="bubble1">
-            <img src="book.PNG" alt="Image 1">
+            <img src="book transparent.png" alt="Image 1">
             <span>Inform Yourself</span>
         </div>
         <div class="bubble" id="bubble2">
