--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
 <body>
     <div class="circle-container">
         <div class="bubble" id="bubble1">
-            <img src="book transparent.png" alt="Image 1">
+            <img src="logo\book.png" alt="Image 1">
             <span>Inform Yourself</span>
         </div>
         <div class="bubble" id="bubble2">
-            <img src="Waiter.PNG" alt="Image 2">
+            <img src="logo\Waiter.png" alt="Image 2">
             <span>At Your Service</span>
         </div>
         <div class="bubble" id="bubble3">
-            <img src="Fist.PNG" alt="Image 3">
+            <img src="logo\Fist.png" alt="Image 3">
             <span>Take Action</span>
         </div>
         <div class="bubble" id="bubble4">
-            <img src="Rocket.PNG" alt="Image 4">
+            <img src="logo\Rocket.png" alt="Image 4">
             <span>Launch Your Project</span>
         </div>
         <div class="bubble" id="bubble5">
-            <img src="Beach.PNG" alt="Image 5">
+            <img src="logo\Beach.png" alt="Image 5">
             <span>Take Care</span>
         </div>
         <div class="bubble smaller" id="epflcourses">
