--- a/index.html
+++ b/index.html
@@ -42,6 +42,14 @@
             <a href="https://semaine-durable.unipoly.ch/">
                 <img src="logo\Semaine_de_la_durabilité transparent.png" alt="Image1sub4">
         </div>
+        <div class="bubble smaller" id="Coaching">
+            <a href="https://people.epfl.ch/michka.melo">
+                <img src="logo\coaching sustainability.png" alt="Image1sub5">
+        </div>
+        <div class="bubble smaller" id="Canard">
+            <a href="https://journal.unipoly.ch/">
+                <img src="logo\le_canard_huppe_logo.png" alt="Image1sub6">
+        </div>
     </div>
 
     <script src="script.js"></script>
