2nd category done

--- a/index.html
+++ b/index.html
@@ -50,6 +50,46 @@
             <a href="https://journal.unipoly.ch/">
                 <img src="logo\le_canard_huppe_logo.png" alt="Image1sub6">
         </div>
+        <div class="bubble smaller" id="Debouches">
+            <a href="https://debouches-durables.unipoly.ch/#:~:text=D%C3%A9bouch%C3%A9s%20Durables%20est%20un%20p%C3%B4le,des%20%C3%A9tudiant.">
+                <img src="logo\débouchés durables.png" alt="Image2sub1">
+        </div>
+        <div class="bubble smaller" id="Carriere">
+            <a href="https://www.le-bon-sens.ch/slowtacarriere">
+                <img src="logo\slow_ta_carriere.png" alt="Image2sub2">
+        </div>
+        <div class="bubble smaller" id="Velo">
+            <a href="https://www.epfl.ch/campus/mobility/mobility-and-travel/commuting/point-velo/">
+                <img src="logo\point velo epfl.jpg" alt="Image2sub3">
+        </div>
+        <div class="bubble smaller" id="Fix">
+            <a href="https://unipoly.ch/fix_n_replace/">
+                <img src="logo\fix n replace logo.png" alt="Image2sub4">
+        </div>
+        <div class="bubble smaller" id="Smart">
+            <a href="https://www.epfl.ch/about/sustainability/sustainable-it/point-smart/">
+                <img src="logo\PointSmart.jpg" alt="Image2sub5">
+        </div>
+        <div class="bubble smaller" id="Biblio">
+            <a href="https://www.unil.ch/durable/fr/home/menuinst/campus-durable/projets-estudiantins/biblotheque-dobjets.html">
+                <img src="logo\biblio-d-objets.jpg" alt="Image2sub6">
+        </div>
+        <div class="bubble smaller" id="Meubleco">
+            <a href="https://meubleco.unipoly.ch/">
+                <img src="logo\meubleco.png" alt="Image2sub7">
+        </div>
+        <div class="bubble smaller" id="Vorace">
+            <a href="https://levorace.ch/">
+                <img src="logo\le_vorace_transparent.png" alt="Image2sub8">
+        </div>
+        <div class="bubble smaller" id="Castor">
+            <a href="https://unipoly.ch/le-castor-freegan/">
+                <img src="logo\Le_castor_logo.png" alt="Image2sub9">
+        </div>
+        <div class="bubble smaller" id="Marche">
+            <a href="https://www.facebook.com/MarcheEPFL/">
+                <img src="logo\marche.jpg" alt="Image2sub10">
+        </div>
     </div>
 
     <script src="script.js"></script>
