--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
         <div class="bubble smaller" id="epflcourses">
             <a href="https://www.epfl.ch/about/sustainability/fr/durabilite-dans-leducation/programmes-detudes-cours-et-moocs/">
                 <img src="logo\EPFLf_logo transparent.png" alt="Image1sub1">
+            </a>
+            <div class="text-description">
+                <h3>Cours EPFL</h3>
+                L'EPFL propose plus de 150 cours liés à la durabilité, aux niveaux du Master et du Bachelor</div>
         </div>
         <div class="bubble smaller" id="CSAW">
             <a href="https://www.epfl.ch/about/sustainability/sustainability-in-education/climate-and-sustainability-action-week-csaw/">
@@ -89,6 +93,18 @@
         <div class="bubble smaller" id="Marche">
             <a href="https://www.facebook.com/MarcheEPFL/">
                 <img src="logo\marche.jpg" alt="Image2sub10">
+        </div>
+        <div class="bubble smaller" id="Convergeance">
+            <a href="https://laconvergence.ch/">
+                <img src="logo\la convergence.png" alt="Image3sub1">
+        </div>
+        <div class="bubble smaller" id="Zero">
+            <a href="https://zeroemission.group/">
+                <img src="logo\zero_emission_group.png" alt="Image3sub2">
+        </div>
+        <div class="bubble smaller" id="Ingenieur">
+            <a href="https://www.epfl.ch/campus/associations/list/idm/">
+                <img src="logo\Ingénieur_e_s_du_monde 2.png" alt="Image3sub3">
         </div>
     </div>
 
