--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
             <span>At Your Service</span>
         </div>
         <div class="bubble" id="bubble3">
-            <img src="logo\Fist.png" alt="Image 3">
-            <span>Take Action</span>
+            <img src="logo\Beach.png" alt="Image 3">
+            <span>Take Care</span>
         </div>
         <div class="bubble" id="bubble4">
             <img src="logo\Rocket.png" alt="Image 4">
             <span>Launch Your Project</span>
         </div>
         <div class="bubble" id="bubble5">
-            <img src="logo\Beach.png" alt="Image 5">
-            <span>Take Care</span>
+            <img src="logo\Fist.png" alt="Image 5">
+            <span>Take Action</span>
         </div>
         <div class="bubble smaller" id="epflcourses">
             <a href="https://www.epfl.ch/about/sustainability/fr/durabilite-dans-leducation/programmes-detudes-cours-et-moocs/">
@@ -105,6 +105,14 @@
         <div class="bubble smaller" id="Ingenieur">
             <a href="https://www.epfl.ch/campus/associations/list/idm/">
                 <img src="logo\Ingénieur_e_s_du_monde 2.png" alt="Image3sub3">
+        </div>
+        <div class="bubble smaller" id="Unipoly">
+            <a href="https://unipoly.ch/">
+                <img src="logo\Unipoly_logo.png" alt="Image3sub4">
+        </div>
+        <div class="bubble smaller" id="Polyquity">
+            <a href="https://polyquity.agepoly.ch/">
+                <img src="logo\Polyquity logo.png" alt="Image3sub5">
         </div>
     </div>
 
