--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
             <span>At Your Service</span>
         </div>
         <div class="bubble" id="bubble3">
-            <img src="logo\Beach.png" alt="Image 3">
-            <span>Take Care</span>
+            <img src="logo\Fist.png" alt="Image 5">
+            <span>Take Action</span>
         </div>
         <div class="bubble" id="bubble4">
             <img src="logo\Rocket.png" alt="Image 4">
             <span>Launch Your Project</span>
         </div>
         <div class="bubble" id="bubble5">
-            <img src="logo\Fist.png" alt="Image 5">
-            <span>Take Action</span>
+            <img src="logo\Sleep.png" alt="Image 3">
+            <span>Take Care</span>
         </div>
         <div class="bubble smaller" id="epflcourses">
             <a href="https://www.epfl.ch/about/sustainability/fr/durabilite-dans-leducation/programmes-detudes-cours-et-moocs/">
@@ -87,7 +87,7 @@
                 <img src="logo\le_vorace_transparent.png" alt="Image2sub8">
         </div>
         <div class="bubble smaller" id="Castor">
-            <a href="https://unipoly.ch/le-castor-freegan/">
+            <a href="https://www.epfl.ch/campus/restaurants-shops-hotels/fr/le-castor-freegan/">
                 <img src="logo\Le_castor_logo.png" alt="Image2sub9">
         </div>
         <div class="bubble smaller" id="Marche">
@@ -113,6 +113,30 @@
         <div class="bubble smaller" id="Polyquity">
             <a href="https://polyquity.agepoly.ch/">
                 <img src="logo\Polyquity logo.png" alt="Image3sub5">
+        </div>
+        <div class="bubble smaller" id="Planqueer">
+            <a href="https://www.epfl.ch/campus/associations/list/planqueer/">
+                <img src="logo\planqueer.png" alt="Image3sub6">
+        </div>
+        <div class="bubble smaller" id="Queermanence">
+            <a href="https://www.instagram.com/p/CkHJo0yj14L/">
+                <img src="logo\logo queermanence.png" alt="Image3sub7">
+        </div>
+        <div class="bubble smaller" id="Amnesty">
+            <a href="https://www.unil.ch/associations/causes-sociales">
+                <img src="logo\amnesty_logo.png" alt="Image3sub8">
+        </div>
+        <div class="bubble smaller" id="EVA">
+            <a href="https://www.facebook.com/eva.unipoly/">
+                <img src="logo\EVA.png" alt="Image3sub9">
+        </div>
+        <div class="bubble smaller" id="Bassenges">
+            <a href="https://fermedebassenges.ch/">
+                <img src="logo\ferme de bassengers.png" alt="Image3sub10">
+        </div>
+        <div class="bubble smaller" id="UPFL">
+            <a href="https://unipoly.ch/unipoly-fashion-lab/">
+                <img src="logo\UPFL_logo.png" alt="Image3sub11">
         </div>
     </div>
 
