--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <span>At Your Service</span>
         </div>
         <div class="bubble" id="bubble3">
-            <img src="logo\Fist.png" alt="Image 5">
+            <img src="logo\Fist.png" alt="Image 3">
             <span>Take Action</span>
         </div>
         <div class="bubble" id="bubble4">
@@ -23,7 +23,7 @@
             <span>Launch Your Project</span>
         </div>
         <div class="bubble" id="bubble5">
-            <img src="logo\Sleep.png" alt="Image 3">
+            <img src="logo\Sleep.png" alt="Image 5">
             <span>Take Care</span>
         </div>
         <div class="bubble smaller" id="epflcourses">
@@ -137,6 +137,14 @@
         <div class="bubble smaller" id="UPFL">
             <a href="https://unipoly.ch/unipoly-fashion-lab/">
                 <img src="logo\UPFL_logo.png" alt="Image3sub11">
+        </div>
+        <div class="bubble smaller" id="Sports">
+            <a href="https://sport.unil.ch/">
+                <img src="logo\logo-centresports.png" alt="Image4sub1">
+        </div>
+        <div class="bubble smaller" id="Tr">
+            <a href="https://sport.unil.ch/">
+                <img src="logo\logo-centresports.png" alt="Image4sub1">
         </div>
     </div>
 
