--- a/index.html
+++ b/index.html
@@ -264,6 +264,51 @@
         <div class="bubble" id="bubble4">
             <img src="logo\Rocket.png" alt="Image 4">
             <span>Launch Your Project</span>
+            <div class="bubble smaller" id="Make">
+                <a href="https://www.epfl.ch/education/educational-initiatives/discovery-learning-program-2/interdisciplinary-projects/">
+                    <img src="logo\EPFLf_logo transparent.png" alt="Image4sub1">
+                </a>
+                <div class="text-description">
+                    <h3>Cours EPFL</h3>
+                    L'EPFL propose plus de 150 cours liés à la durabilité, au niveau Bachelor et Master
+                </div>
+            </div>
+            <div class="bubble smaller" id="Durabilis">
+                <a href="https://www.epfl.ch/about/sustainability/sustainability-in-education/durabilis-award/">
+                    <img src="logo\durabilis.jpg" alt="Image4sub2">
+                </a>
+                <div class="text-description">
+                    <h3>Cours EPFL</h3>
+                    L'EPFL propose plus de 150 cours liés à la durabilité, au niveau Bachelor et Master
+                </div>
+            </div>
+            <div class="bubble smaller" id="Skil">
+                <a href="https://www.epfl.ch/labs/skil/en/skil-for-your-project/propose-a-project/">
+                    <img src="logo\SKIL_logo.png" alt="Image4sub3">
+                </a>
+                <div class="text-description">
+                    <h3>Cours EPFL</h3>
+                    L'EPFL propose plus de 150 cours liés à la durabilité, au niveau Bachelor et Master
+                </div>
+            </div>
+            <div class="bubble smaller" id="Changemakers">
+                <a href="https://www.epfl.ch/innovation/students-innovation-lab/epfl-changemakers/">
+                    <img src="logo\Changemakers_Logo.png" alt="Image4sub4">
+                </a>
+                <div class="text-description">
+                    <h3>Cours EPFL</h3>
+                    L'EPFL propose plus de 150 cours liés à la durabilité, au niveau Bachelor et Master
+                </div>
+            </div>
+            <div class="bubble smaller" id="Ucreate">
+                <a href="https://ucreate.ch/">
+                    <img src="logo\ucreate.png" alt="Image4sub5">
+                </a>
+                <div class="text-description">
+                    <h3>Cours EPFL</h3>
+                    L'EPFL propose plus de 150 cours liés à la durabilité, au niveau Bachelor et Master
+                </div>
+            </div>
         </div>
         <div class="bubble" id="bubble5">
             <img src="logo\Sleep.png" alt="Image 5">
