--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
     <div class="circle-container">
+        <!-- Understand Category -->
         <div class="bubble" id="bubble1">
             <img src="logo\book.png" alt="Image 1">
             <span>Inform Yourself</span>
+            <!-- EPFL Courses -->
             <div class="bubble smaller" id="epflcourses">
                 <a href="https://www.epfl.ch/about/sustainability/fr/durabilite-dans-leducation/programmes-detudes-cours-et-moocs/">
                     <img src="logo\EPFLf_logo transparent.png" alt="Image1sub1">
@@ -18,6 +20,7 @@
                     L'EPFL propose plus de 150 cours liés à la durabilité, au niveau Bachelor et Master
                 </div>
             </div>
+            <!-- CSAW -->
             <div class="bubble smaller" id="CSAW">
                 <a href="https://www.epfl.ch/about/sustainability/sustainability-in-education/climate-and-sustainability-action-week-csaw/">
                     <img src="logo\Final CSAW_transparent.png" alt="Image1sub2">
