--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <!-- 1st Category : Understand -->
+    <!-- 1st Category : Inform Yourself -->
     <div class="bubble" id="bubble1">
         <img src="logo\book.png" alt="Image 1">
         <span>Inform Yourself</span>
