--- a/page1.html
+++ b/page1.html
@@ -2,19 +2,79 @@
 <html>
 <head>
     <title>Inform yourself</title>
+    <script src="https://kit.fontawesome.com/40cbf1602d.js" crossorigin="anonymous"></script>
     <style>
-        .left-container {
-            float: left;
-            width: 80%;
-            background-color: #fff;
-            height: 100%;
+        html, body{ 
+            height: 100%; 
+            margin:0; 
+            padding:0; 
         }
-
-        .right-container {
-            float: right;
-            width: 20%;
+        .push{
+            height: 20px; 
+            clear:both;             
+        } 
+        #footer {
+            height: 60px; 
+            clear:both; 
+            background-color:rgb(230, 230, 230);
+            font-family: 'Times New Roman', Times, serif;
+            text-align: center;
+        }
+        .header a{
+			text-decoration:none;color:rgb(230, 230,230);
+		}
+        .header a:hover{text-decoration:none;color: rgb(230, 230,230);}
+        .header{
+            position: fixed;
+            left: 0%; 
+            top: 0%;
+            width:100%;
+            height: 12%;
+            background-color: #079428;
+            z-index: 99999;
+            overflow: hidden;
+        }
+        .header-item{left: 7%;top:10%; position: relative;}
+        .header-item li{
+            height: 70%;
+            margin-top: 20px;
+            margin-bottom: 20px;
+            margin-left: 55px;
+            position: relative;
+            display: inline-block;
+            font-size: 130%;
+            font-family: 'Times New Roman', Times, serif;
+            font-weight: bolder;
+            text-align: center;
+        }
+        .header-underline{
+			position:relative;
+		}
+		.header-underline::after{
+			content:'';
+			display:block;
+			width:100%;
+			height:2px;
+			position:inherit;
+			bottom:-10px;
+			background:white;
+			transition:all 0.3s ease-in-out;
+			transform: scale3d(0,1,1);
+			transform-origin:50% 0;
+		}
+		.header-underline:hover::after{
+			transform:scale3d(1,1,1);
+		}
+        .list-container {
+            left: 4%;
+            width: 100%;
+            position: relative;
+            margin-top: 100px;
             background-color: #fff;
-            height: 100%;
+            min-height: 100%; 
+            height: auto !important; 
+            height: 100%; 
+            margin: 0 auto -60px;/*margin-bottom的负值等于footer高度*/ 
         }
 
         .resource-container {
@@ -46,100 +106,76 @@
             font-weight: bold;
         }
 
-        .category-container {
-            display: flex; /* Use flexbox to create a horizontal layout */
-            align-items: center; /* Align items vertically */
-            padding-bottom: 30px;
-        }
-
-        .category-img {
-            width: 100px; /* Set the fixed width of the image container */
-            margin-left: 20px; /* Add some spacing between the box and the left border */
-            margin-right: 50px; /* Add some spacing between image and text */
-        }
-
-        /* Optional: Control how the image is resized within its container */
-        .category-img img {
-            width: 100%; /* Ensure the image fills the container horizontally */
-            height: 100%; /* Ensure the image fills the container vertically */
-            object-fit: cover; /* Resize the image to cover the container while preserving aspect ratio */
-        }
-
-        .category-text {
-            width: 40%; /* Set the width of the text container */
-        }
-        .category-title {
-            font-size: 16px;
-            font-weight: bold;
-        }
-
     </style>
 </head>
 <body>
-    <div class="left-container">
+    <div class="header">
+        <div class="header-item" >
+            <li><a class="header-underline" href="index.html"><i class="fa-solid fa-house"></i></a></li>
+            <li><a class="header-underline" href="page1.html">Inform yourself</a></li>
+            <li><a class="header-underline" href="page2.html">At your service</a></li>
+            <li><a class="header-underline" href="page3.html">Take action</a></li>
+            <li><a class="header-underline" href="page4.html">Launch your project</a></li>
+            <li><a class="header-underline" href="page5.html">Take care</a></li>
+        </div>
+    </div>
+    <div class="list-container">
         <div class="resource-container">
             <div class="resource-img">
-                <img src="logo\EPFLf_logo transparent.png" alt="Image 1">
+                <img src="logo/EPFLf_logo transparent.png" alt="Image 1">
             </div>
             <div class="resource-text">
                 <p class="resource-title">EPFL Courses</p>
                 <p>EPFL offers over 150 sustainability-related classes at both Bachelor's and Master's level.</p>
+                <p>Contact: jacopo.grazioli@epfl.ch</p>
                 <p><a href="https://www.epfl.ch/about/sustainability/fr/durabilite-dans-leducation/programmes-detudes-cours-et-moocs/">Course Link</a></p>
             </div>
             <hr>
         </div>
         <div class="resource-container">
             <div class="resource-img">
-                <img src="logo\EVA.png" alt="Image 1">
+                <img src="logo/Final CSAW_transparent.png" alt="Image 1">
             </div>
             <div class="resource-text">
                 <p class="resource-title">CSAW (Climate & Sustainability Action Week)</p>
                 <p>CSAW is a non credited 1 week summer school cocreated by UNIL and EPFL students and staff. The school is open to Bachelor, Master and PhD students from UNIL and EPFL. It aims to empower students to become change agents by providing them with practices and tools for self-awareness, collaboration and system change.</p>
-                <p><a href="https://www.epfl.ch/about/sustainability/fr/durabilite-dans-leducation/programmes-detudes-cours-et-moocs/">Course Link</a></p>
+                <p>Contact: csaw@epfl.ch</p>
             </div>
         </div>
+        <div class="resource-container">
+            <div class="resource-img">
+                <img src="logo/Fresque du climat.png" alt="Image 1">
+            </div>
+            <div class="resource-text">
+                <p class="resource-title">Fresque du climat</p>
+                <p>The fresks are fun, collaborative and creative 3 hours workshops meant to raise awareness about environmental issues, and based on collective intelligence. the workshop available at the Climate Fresk, Biodiversity Fresks and Digital Collage.</p>
+                <p>Contact: alice.klein@epfl.ch, louis.cousturian@epfl.ch</p>
+            </div>
+        </div>
+        <div class="resource-container">
+            <div class="resource-img">
+                <img src="logo/le canard huppe red.png" alt="Image 1">
+            </div>
+            <div class="resource-text">
+                <p class="resource-title">Le canard huppé</p>
+                <p>Produced by amateur journalists, the newspaper allows anyone who wants to try their hand at writing articles, creating videos, recording podcasts and any other medium. The subjects of publication mainly concern environmental issues in the broadest sense (political, economic, technical, societal, psychological, spiritual, etc.)</p>
+                <p>Contact: journal@unipoly.ch</p>
+            </div>
+        </div>
+        <div class="resource-container">
+            <div class="resource-img">
+                <img src="logo/Semaine_de_la_durabilité transparent.png" alt="Image 1">
+            </div>
+            <div class="resource-text">
+                <p class="resource-title">Semaine de la durabilité</p>
+                <p>Sustainability Week is the largest student sustainability project in Switzerland. It takes place every 4th week of the spring semester on the UNILEPFL campus. It aims to raise students' awareness of sustainability and ecological issues.</p>
+                <p>Contact: sd@unipoly.ch</p>
+            </div>
+        </div>
+        <div class="push"><!-- not put anything here --></div> 
     </div>
-    <div class="right-container">
-        <div class="category-container">
-            <div class="category-img">
-                <img src="logo\book.png" alt="Image 1">
-            </div>
-            <div class="category-text">
-                <p class="category-title">Inform Yourself</p>
-            </div>
-        </div>
-        <div class="category-container">
-            <div class="category-img">
-                <img src="logo\waiter.png" alt="Image 1">
-            </div>
-            <div class="category-text">
-                <p class="category-title">At your service</p>
-            </div>
-        </div>
-        <div class="category-container">
-            <div class="category-img">
-                <img src="logo\fist.png" alt="Image 1">
-            </div>
-            <div class="category-text">
-                <p class="category-title">Engage yourself</p>
-            </div>
-        </div>
-        <div class="category-container">
-            <div class="category-img">
-                <img src="logo\rocket.png" alt="Image 1">
-            </div>
-            <div class="category-text">
-                <p class="category-title">Launch your project</p>
-            </div>
-        </div>
-        <div class="category-container">
-            <div class="category-img">
-                <img src="logo\sleep.png" alt="Image 1">
-            </div>
-            <div class="category-text">
-                <p class="category-title">Take care of yourself</p>
-            </div>
-        </div>
-    </div>
+    <div id="footer">
+        <p style="padding-top: 20px;">@ ...</p>
+    </div> 
 </body>
 </html>
