--- a/auto_website.html
+++ b/auto_website.html
@@ -75,7 +75,7 @@
         <div class="bubble smaller" id="CoachingSustainability">
             <a
                 href="https://people.epfl.ch/michka.melo">
-                <img src="logo\" alt="Image">
+                <img src="logo\Coaching sustainability.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Coaching Sustainability</h3>
@@ -86,7 +86,7 @@
         <div class="bubble smaller" id="associationdébouchésdurables">
             <a
                 href="https://debouches-durables.unipoly.ch/#:~:text=Qui%20sommes%2Dnous%20%3F,des%20%C3%A9tudiant.">
-                <img src="logo\" alt="Image">
+                <img src="logo\débouchés durables.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>association débouchés durables</h3>
@@ -97,7 +97,7 @@
         <div class="bubble smaller" id="Slowtacarrière">
             <a
                 href="https://www.le-bon-sens.ch/slowtacarriere">
-                <img src="logo\" alt="Image">
+                <img src="logo\slow_ta_carriere.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Slow ta carrière</h3>
@@ -108,7 +108,7 @@
         <div class="bubble smaller" id="Pointvélo">
             <a
                 href="https://www.epfl.ch/campus/mobility/mobility-and-travel/commuting/point-velo/">
-                <img src="logo\" alt="Image">
+                <img src="logo\point velo epfl.jpg" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Point vélo</h3>
@@ -119,7 +119,7 @@
         <div class="bubble smaller" id="Bibliothèqued’objets">
             <a
                 href="https://www.unil.ch/durable/fr/home/menuinst/campus-durable/projets-estudiantins/biblotheque-dobjets.html">
-                <img src="logo\" alt="Image">
+                <img src="logo\biblio-d-objets.jpg" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Bibliothèque d’objets</h3>
@@ -130,7 +130,7 @@
         <div class="bubble smaller" id="Fixn’ReplaceRepaircafé">
             <a
                 href="https://www.instagram.com/fixnreplace/">
-                <img src="logo\" alt="Image">
+                <img src="logo\fix n replace logo.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Fix n’Replace (Repair café)</h3>
@@ -141,7 +141,7 @@
         <div class="bubble smaller" id="EpiceriecoopérativeleVorace">
             <a
                 href="https://levorace.ch/">
-                <img src="logo\" alt="Image">
+                <img src="logo\le_vorace_transparent.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Epicerie coopérative le Vorace</h3>
@@ -152,7 +152,7 @@
         <div class="bubble smaller" id="MarchéEPFL">
             <a
                 href="https://www.facebook.com/MarcheEPFL/">
-                <img src="logo\" alt="Image">
+                <img src="logo\marche.jpg" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Marché EPFL</h3>
@@ -163,7 +163,7 @@
         <div class="bubble smaller" id="PointSmartCellphones">
             <a
                 href="https://www.epfl.ch/about/sustainability/sustainable-it/point-smart/">
-                <img src="logo\" alt="Image">
+                <img src="logo\PointSmart.jpg" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Point Smart (Cellphones)</h3>
@@ -174,7 +174,7 @@
         <div class="bubble smaller" id="Meubléco">
             <a
                 href="https://meubleco.unipoly.ch/">
-                <img src="logo\" alt="Image">
+                <img src="logo\meubleco.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Meubléco</h3>
@@ -185,7 +185,7 @@
         <div class="bubble smaller" id="CastorFreegan">
             <a
                 href="https://www.epfl.ch/campus/restaurants-shops-hotels/fr/le-castor-freegan/">
-                <img src="logo\" alt="Image">
+                <img src="logo\Le_castor_logo.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Castor Freegan</h3>
@@ -201,7 +201,7 @@
         <div class="bubble smaller" id="LaConvergence">
             <a
                 href="https://laconvergence.ch/">
-                <img src="logo\" alt="Image">
+                <img src="logo\la convergence.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>La Convergence</h3>
@@ -212,7 +212,7 @@
         <div class="bubble smaller" id="Unipoly">
             <a
                 href="https://unipoly.ch/">
-                <img src="logo\" alt="Image">
+                <img src="logo\Unipoly_logo.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Unipoly</h3>
@@ -223,7 +223,7 @@
         <div class="bubble smaller" id="ZeroEmissionGroup">
             <a
                 href="https://zeroemission.group/">
-                <img src="logo\" alt="Image">
+                <img src="logo\zero_emission_group.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Zero Emission Group</h3>
@@ -234,7 +234,7 @@
         <div class="bubble smaller" id="Ingénieur·esdumonde">
             <a
                 href="https://www.epfl.ch/campus/associations/list/idm/">
-                <img src="logo\" alt="Image">
+                <img src="logo\Ingénieur_e_s_du_monde 2.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Ingénieur·es du monde</h3>
@@ -245,7 +245,7 @@
         <div class="bubble smaller" id="Polyquity">
             <a
                 href="https://polyquity.ch/">
-                <img src="logo\" alt="Image">
+                <img src="logo\polyquity_new.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Polyquity</h3>
@@ -256,7 +256,7 @@
         <div class="bubble smaller" id="PlanQueer">
             <a
                 href="https://www.epfl.ch/campus/associations/list/planqueer/">
-                <img src="logo\" alt="Image">
+                <img src="logo\planqueer.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>PlanQueer</h3>
@@ -267,7 +267,7 @@
         <div class="bubble smaller" id="Queermanence">
             <a
                 href="https://www.instagram.com/p/CkHJo0yj14L/">
-                <img src="logo\" alt="Image">
+                <img src="logo\logo queermanence.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Queermanence</h3>
@@ -278,7 +278,7 @@
         <div class="bubble smaller" id="AmnestydesHautesEcolesLausannoises">
             <a
                 href="https://www.unil.ch/associations/causes-sociales">
-                <img src="logo\" alt="Image">
+                <img src="logo\amnesty_logo.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Amnesty des Hautes Ecoles Lausannoises</h3>
@@ -289,7 +289,7 @@
         <div class="bubble smaller" id="Associationdesétudiant·esvégan·esetanimalistes">
             <a
                 href="https://www.facebook.com/eva.unipoly/">
-                <img src="logo\" alt="Image">
+                <img src="logo\EVA.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Association des étudiant·es végan·es et animalistes</h3>
@@ -300,7 +300,7 @@
         <div class="bubble smaller" id="FermedeBassenges">
             <a
                 href="https://fermedebassenges.ch/">
-                <img src="logo\" alt="Image">
+                <img src="logo\ferme de bassengers.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Ferme de Bassenges</h3>
@@ -311,7 +311,7 @@
         <div class="bubble smaller" id="ThriftstoreUPFashionLab">
             <a
                 href="https://www.facebook.com/upfashionlab/">
-                <img src="logo\" alt="Image">
+                <img src="logo\UPFL_logo.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Thrift store UPFashionLab</h3>
@@ -327,7 +327,7 @@
         <div class="bubble smaller" id="Make">
             <a
                 href="https://www.epfl.ch/education/educational-initiatives/discovery-learning-program-2/interdisciplinary-projects/">
-                <img src="logo\" alt="Image">
+                <img src="logo\EPFLf_logo transparent.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Make</h3>
@@ -338,7 +338,7 @@
         <div class="bubble smaller" id="Durabilis">
             <a
                 href="https://www.epfl.ch/about/sustainability/sustainability-in-education/durabilis-award/">
-                <img src="logo\" alt="Image">
+                <img src="logo\durabilis.jpg" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Durabilis</h3>
@@ -349,7 +349,7 @@
         <div class="bubble smaller" id="Skil">
             <a
                 href="https://www.epfl.ch/labs/skil/en/skil-for-your-project/propose-a-project/">
-                <img src="logo\" alt="Image">
+                <img src="logo\SKIL_logo.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Skil</h3>
@@ -360,7 +360,7 @@
         <div class="bubble smaller" id="EPFLChangemakers">
             <a
                 href="https://www.epfl.ch/innovation/students-innovation-lab/epfl-changemakers/">
-                <img src="logo\" alt="Image">
+                <img src="logo\Changemakers_Logo.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>EPFL Changemakers</h3>
@@ -371,7 +371,7 @@
         <div class="bubble smaller" id="Ucreate">
             <a
                 href="https://ucreate.ch/">
-                <img src="logo\" alt="Image">
+                <img src="logo\ucreate.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Ucreate</h3>
@@ -387,7 +387,7 @@
         <div class="bubble smaller" id="SportscenterEPFL-UNIL">
             <a
                 href="https://sport.unil.ch/">
-                <img src="logo\" alt="Image">
+                <img src="logo\logo-centresports.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Sports center EPFL-UNIL</h3>
@@ -398,7 +398,7 @@
         <div class="bubble smaller" id="Espace-Transitions">
             <a
                 href="https://www.unil.ch/espace-transitions/fr/home.html">
-                <img src="logo\" alt="Image">
+                <img src="logo\logo ET carré.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Espace-Transitions</h3>
@@ -409,7 +409,7 @@
         <div class="bubble smaller" id="TrustandSupportNetworkTSN">
             <a
                 href="https://www.epfl.ch/campus/community/trust-and-support-network/">
-                <img src="logo\" alt="Image">
+                <img src="logo\Trust-support-network-epfl-.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Trust and Support Network (TSN)</h3>
@@ -420,7 +420,7 @@
         <div class="bubble smaller" id="Guidedmeditation">
             <a
                 href="https://www.epfl.ch/campus/spiritual-care/activites/meditation/">
-                <img src="logo\" alt="Image">
+                <img src="logo\meditation.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Guided meditation</h3>
@@ -431,7 +431,7 @@
         <div class="bubble smaller" id="ForêtdeDorigny">
             <a
                 href="https://www.google.com/maps/place/For%C3%AAt+de+Dorigny/@46.5233077,6.578139,15z/data=!4m2!3m1!1s0x0:0x72d0e6ee0ae1dd4c?sa=X&ved=2ahUKEwiqx5nplcL-AhVPhf0HHTw7AHwQ_BJ6BAhVEAg">
-                <img src="logo\" alt="Image">
+                <img src="logo\foret.jpg" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Forêt de Dorigny</h3>
