--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="bubble smaller" id="Debouches">
             <a
                 href="https://debouches-durables.unipoly.ch/#:~:text=D%C3%A9bouch%C3%A9s%20Durables%20est%20un%20p%C3%B4le,des%20%C3%A9tudiant.">
-                <img src="logo\débouchés durables.png" alt="Image2sub1">
+                <img src="logo\débouchés durables transparent.png" alt="Image2sub1">
             </a>
             <div class="text-description">
                 <h3>Associations des débouchés durables</h3>
