add banner for the index html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html>
 
 <head>
-    <title>EPFL/UNIL Sustainability Resources</title>
+    <title>EPFL Sustainability Resources</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/40cbf1602d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+    <div class="header">
+        <div class="header-item" >
+            <li>EPFL Sustainability Resources</li>
+            <li>Fr/En</li>
+        </div>
+    </div>
     <div class="circle-container">
         <!-- 1st Category : Inform Yourself -->
         <div class="bubble" id="bubble1">
