--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>EPFL/UNIL Sustainability Resources</title>
+    <title>EPFL Sustainability Resources</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
