--- a/page1.html
+++ b/page1.html
@@ -16,6 +16,7 @@
             <li><a class="header-underline" href="page3.html">Take action</a></li>
             <li><a class="header-underline" href="page4.html">Launch your project</a></li>
             <li><a class="header-underline" href="page5.html">Take care</a></li>
+            <li><a class="header-underline" href="page5.html">Fr/En</a></li>
         </div>
     </div>
     <div class="list-container">
