--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Inform yourself</title>
+    <title>At your service</title>
     <link rel="stylesheet" href="style_detail_page.css">
     <script src="https://kit.fontawesome.com/40cbf1602d.js" crossorigin="anonymous"></script>
 </head>
@@ -19,6 +19,7 @@
         </div>
     </div>
     <div class="list-container">
+        <!-- 1st Category : Inform Yourself -->
         <div class="resource-container">
             <div class="resource-img">
                 <img src="logo/EPFLf_logo transparent.png" alt="Image 1">
