--- a/auto_website.html
+++ b/auto_website.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Category 1 : Inform Yourself-->
     <div class="bubble" id="bubble1">
-        <img src="logo\book.png" alt="Image">
+        <img src="logo\Apprendre.png" alt="Image">
         <span>Inform Yourself</span>
         <!-- EPFL Courses -->
         <div class="bubble smaller" id="EPFLCourses">
@@ -69,7 +69,7 @@
     </div>
     <!-- Category 2 : At Your Service-->
     <div class="bubble" id="bubble2">
-        <img src="logo\Waiter.png" alt="Image">
+        <img src="logo\Services.png" alt="Image">
         <span>At Your Service</span>
         <!-- Coaching Sustainability -->
         <div class="bubble smaller" id="CoachingSustainability">
@@ -170,17 +170,6 @@
                 In order to extend the life of mobile phones, a repair service at cost price is offered on the Ecublens campus every day between noon and 2 p.m. at the Poseidon premises.
             </div>
         </div>
-        <!-- Meubléco -->
-        <div class="bubble smaller" id="Meubléco">
-            <a
-                href="https://meubleco.unipoly.ch/">
-                <img src="logo\meubleco.png" alt="Image">
-            </a>
-            <div class="text-description">
-                <h3>Meubléco</h3>
-                If you move or want to sell your furniture, Meubléco offers you to come and buy and recover your furniture in good condition on June 17, June 24 and July 1, 2023. These pieces of furniture will be resold at a low price to other students during our furniture fair organized for Marcheco which will take place in September 2023 at EPFL!
-            </div>
-        </div>
         <!-- Castor Freegan -->
         <div class="bubble smaller" id="CastorFreegan">
             <a
@@ -192,10 +181,21 @@
                 The participatory project "Le castor Freegan" transforms unsold fruit and vegetables collected on the same day into a free-price dinner at the Rolex Learning Center. It's a student-run cafeteria designed to get students involved in joint projects. You can come and eat that evening, but you can also help to cook, serve or collect unsold produce.
             </div>
         </div>
+        <!-- Meubléco -->
+        <div class="bubble smaller" id="Meubléco">
+            <a
+                href="https://meubleco.unipoly.ch/">
+                <img src="logo\meubleco.png" alt="Image">
+            </a>
+            <div class="text-description">
+                <h3>Meubléco</h3>
+                If you move or want to sell your furniture, Meubléco offers you to come and buy and recover your furniture in good condition on June 17, June 24 and July 1, 2023. These pieces of furniture will be resold at a low price to other students during our furniture fair organized for Marcheco which will take place in September 2023 at EPFL!
+            </div>
+        </div>
     </div>
     <!-- Category 3 : Take Action-->
     <div class="bubble" id="bubble3">
-        <img src="logo\Fist.png" alt="Image">
+        <img src="logo\Community.png" alt="Image">
         <span>Take Action</span>
         <!-- La Convergence -->
         <div class="bubble smaller" id="LaConvergence">
@@ -321,7 +321,7 @@
     </div>
     <!-- Category 4 : Launch Your Project-->
     <div class="bubble" id="bubble4">
-        <img src="logo\Rocket.png" alt="Image">
+        <img src="logo\Startup.png" alt="Image">
         <span>Launch Your Project</span>
         <!-- Make -->
         <div class="bubble smaller" id="Make">
@@ -381,7 +381,7 @@
     </div>
     <!-- Category 5 : Take Care-->
     <div class="bubble" id="bubble5">
-        <img src="logo\Sleep.png" alt="Image">
+        <img src="logo\Sain.png" alt="Image">
         <span>Take Care</span>
         <!-- Sports center EPFL-UNIL -->
         <div class="bubble smaller" id="SportscenterEPFL-UNIL">
