--- a/index.html
+++ b/index.html
@@ -322,7 +322,8 @@
     <!-- Category 4 : Launch Your Project-->
     <div class="bubble" id="bubble4">
         <img src="logo\Startup.png" alt="Image">
-        <span>Launch Your Project</span>
+        <span>Launch</span>
+        <span>Your Project</span>
         <!-- Make -->
         <div class="bubble smaller" id="Make">
             <a
