--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="bubble smaller" id="associationdébouchésdurables">
             <a
                 href="https://debouches-durables.unipoly.ch/#:~:text=Qui%20sommes%2Dnous%20%3F,des%20%C3%A9tudiant.">
-                <img src="logo\débouchés durables.png" alt="Image">
+                <img src="logo\debouches.jpg" alt="Image">
             </a>
             <div class="text-description">
                 <h3>association débouchés durables</h3>
@@ -152,7 +152,7 @@
         <div class="bubble smaller" id="MarchéEPFL">
             <a
                 href="https://www.facebook.com/MarcheEPFL/">
-                <img src="logo\marche.jpg" alt="Image">
+                <img src="logo\marche.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Marché EPFL</h3>
