--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <div class="bubble smaller" id="associationdébouchésdurables">
             <a
                 href="https://debouches-durables.unipoly.ch/#:~:text=Qui%20sommes%2Dnous%20%3F,des%20%C3%A9tudiant.">
-                <img src="logo\debouches.jpg" alt="Image">
+                <img src="logo\débouchés durables.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>association débouchés durables</h3>
@@ -108,7 +108,7 @@
         <div class="bubble smaller" id="Pointvélo">
             <a
                 href="https://www.epfl.ch/campus/mobility/mobility-and-travel/commuting/point-velo/">
-                <img src="logo\point velo epfl.jpg" alt="Image">
+                <img src="logo\point velo title.png" alt="Image">
             </a>
             <div class="text-description">
                 <h3>Point vélo</h3>
