--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="intro-container"></div>
+    <div class="bubbles-container">
         <!-- Category 1 : Inform Yourself-->
         <div class="bubble" id="bubble1">
             <img src="logo\Apprendre.png" alt="Image">
